2005-09-16  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (check_ut_type):
	added RUN-LVL and ACCOUNTING

2005-09-16  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/configure.in (XGetAtomNames): fixed the test
	use CL_FIND_X instead of AC_PATH_XTRA
	* modules/clx/new-clx/link.sh, modules/clx/new-clx/Makefile.in:
	updated for to use CL_FIND_X instead of AC_PATH_XTRA

2005-09-15  Sam Steingold  <sds@gnu.org>

	* lispbibl.d: use puts() instead of printf() when possible
	(MAKE_CHECK_LOW, MAKE_CHECK, MAKE_CHECK_): new macros
	(with_string_0_help_, with_sstring_0_help_): take both "A" for
	cstombs_help_() and "NR" for unpack_sstring_alloca_help_()
	* genclisph.d (export_literal): added

2005-09-15  Sam Steingold  <sds@gnu.org>

	* modules/bindings/win32/win32.lisp (GetCurrentThreadId): added
	* modules/bindings/win32/test.tst: new file

2005-09-15  Sam Steingold  <sds@gnu.org>

	* configure: document --enable-maintainer-mode
	* makemake.in: handle --enable-maintainer-mode
	the only developer target (affected by --enable-maintainer-mode)
	is remaking src/configure using autoconf

2005-09-15  Sam Steingold  <sds@gnu.org>

	(clisp.h): ensure that __FILE__ and __LINE__ are expanded
	after the file is included, not when it is generated
	* lispbibl.d (NOTREACHED, ASSERT, OBJECT_OUT): do not use
	export_def() to avoid putting string "lispbibl.d" into clisp.h
	(cstombs, unpack_sstring_alloca): define using *_help_()
	for the same reason
	(with_string_0_help_, with_sstring_0_help_): ditto
	* makemake.in (clisp.h): check that the string "lispbibl.d" is not there

2005-09-14  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (GCself, varobject_type): fixed export conditional

2005-09-14  Sam Steingold  <sds@gnu.org>

	* stream.d (sec_usec): support 64-bit struct timeval
	(sec_usec_number): new function
	* lispbibl.d (sec_usec_number): export
	* configure.in (struct timeval): check sizeof
	* modules/rawsock/rawsock.c (timeval_to_number): removed